
*Released 2022-06-28*

.. warning:: **Breaking Changes**

   This release removes WiredTiger cache computation, which was required
   for MongoDB versions earlier than 4.0.9. Before you upgrade
   to this release, you must upgrade your database deployment to use
   MongoDB version 4.0.9 or later.

   To learn how to upgrade your deployment, see
   :ref:`meko-upgrade-mdb-version`.


MongoDB Resource
````````````````

- Removes the ``spec.podSpec.podAntiAffinityTopologyKey``,
  ``spec.podSpec.podAffinity``, and ``spec.podSpec.nodeAffinity``
  settings.

  Instead, use :setting:`spec.podSpec.podTemplate` to configure these
  parameters.

MongoDBOpsManager Resource
``````````````````````````

- Removes the ``spec.applicationDatabase.podSpec.podAntiAffinityTopologyKey``,
  ``spec.applicationDatabase.podSpec.podAffinity``, and 
  ``spec.applicationDatabase.podSpec.nodeAffinity`` settings.

  Instead, use :opsmgrkube:`spec.applicationDatabase.podSpec.podTemplate 
  <spec.applicationDatabase>` to configure these
  parameters.

.. _ent_op-1.16.1:

|k8s-op-full| 1.16.1
~~~~~~~~~~~~~~~~~~~~

*Released 2022-05-24*

MongoDB Resource
````````````````

- Deprecates the :setting:`spec.service` parameter. Use 
  :setting:`spec.statefulSet.spec.serviceName` to provide a custom service name.

.. _ent_op-1.16.0:

|k8s-op-full| 1.16.0
~~~~~~~~~~~~~~~~~~~~

*Released 2022-04-29*

MongoDB Resource
````````````````

- Removes the ``spec.security.tls.secretRef.name`` parameter. 

  - |k8s-op-short| version `v1.10.0` deprecated this parameter.
  - To specify the secret name containing the certificate for the
    database, use :setting:`spec.security.certsSecretPrefix`.
  - Create the secret containing the certificates accordingly.

- Removes the ``spec.podSpec.cpu`` and
  ``spec.podSpec.memory`` parameters.

  To override the CPU/Memory resources for the database pod, set the
  ``statefulset`` parameter under
  :setting:`spec.podSpec.podTemplate.spec.containers`.
