@@ -13,6 +13,14 @@ symlink: stable -> v1.16
 raw: docs/kubernetes-operator/ -> ${base}/stable/
 
 # Add redirects related to the addition of new topics for multi-cluster
+# beta security in the Operator v1.16.x, and single cluster LDAP:
+
+[*-v1.15]: docs/kubernetes-operator/${version}/multi-cluster-secure-client-connections -> ${base}/stable/multi-cluster-secure-client-connections
+[*-v1.15]: docs/kubernetes-operator/${version}/multi-cluster-secure-ldap-auth -> ${base}/stable/multi-cluster-secure-ldap-auth
+[*-v1.15]: docs/kubernetes-operator/${version}/tutorial/secure-client-connections -> ${base}/stable/tutorial/secure-client-connections
+[*-v1.15]: docs/kubernetes-operator/${version}/tutorial/secure-ldap-auth -> ${base}/tutorial/secure-ldap-auth
+
+# Add redirects related to the addition of new topics for multi-cluster
 # beta in the Operator v1.13.
 
 [*-v1.12]: docs/kubernetes-operator/${version}/multi-cluster -> ${base}/stable/multi-cluster
