@@ -1,0 +1,12 @@
+`MongoDB Enterprise <http://www.mongodb.com/products/mongodb-enterprise?jmp=docs>`_
+supports:
+
+- Proxying authentication requests to a Lightweight Directory Access
+  Protocol (LDAP) service.
+- Simple and SASL binding to LDAP servers. MongoDB Enterprise can bind
+  to an LDAP server via ``saslauthd`` or through the operating system
+  libraries.
+
+To learn more, see the :manual:`LDAP Proxy Authentication </core/security-ldap>`
+and :manual:`LDAP Authorization </core/security-ldap-external>` sections
+in the MongoDB Server documentation.
