@@ -261,7 +261,7 @@ content: |
 
      kubectl --context $MDB_CENTRAL_CLUSTER_FULL_NAME \
        --namespace=<metadata.namespace> \
-     create secret tls <prefix>-<metadata.name>-cert \
+       create secret tls <prefix>-<metadata.name>-cert \
        --cert=<resource-tls-cert> \
        --key=<resource-tls-key>
 
