@@ -1,0 +1,35 @@
+:noprevnext:
+
+.. _multi-cluster-secure-client-connections:
+
+======================================================
+Secure Client Connections in Multi-Cluster Deployments
+======================================================
+
+.. default-domain:: mongodb
+
+.. contents:: On this page
+   :local:
+   :backlinks: none
+   :depth: 1
+   :class: singlecol
+
+:ref:`multi-cluster-secure-ldap-auth`
+  Configure |ldap| for client authentication in |multi-clusters|.
+
+:ref:`multi-cluster-secure-x509`
+  Configure X.509 for client authentication in |multi-clusters|.
+
+:ref:`multi-cluster-secure-internal-auth`
+  Configure |tls| and X.509 for internal authentication in
+  |multi-clusters|.
+
+.. class:: hidden
+
+   .. toctree::
+      :titlesonly:
+
+      /tutorial/multi-cluster-secure-ldap-auth
+      /tutorial/multi-cluster-secure-x509
+      /tutorial/multi-cluster-secure-internal-auth
+
