@@ -1,0 +1,44 @@
+:noprevnext:
+
+.. _multi-cluster-secure-ldap-auth:
+
+===================================================================
+Secure Client Authentication with LDAP in Multi-Cluster Deployments
+===================================================================
+
+.. include:: /includes/styles/corrections.rst
+
+.. default-domain:: mongodb
+
+.. contents:: On this page
+   :local:
+   :backlinks: none
+   :depth: 2
+   :class: singlecol
+
+.. include:: /includes/facts/ldap-intro.rst
+
+You can use the |k8s-op-short| to configure LDAP to authenticate your
+client applications that connect to your |multi-clusters|. This guide
+describes how to configure LDAP authentication from client applications
+to your |multi-clusters|.
+
+Considerations
+--------------
+
+.. include:: /includes/facts/ldap-considerations.rst
+
+General Prerequisites
+---------------------
+
+Before you secure your |multi-cluster| using |tls|
+encryption, complete the following tasks:
+
+- Follow the steps in the :ref:`Multi-Cluster Quick Start Prerequisites <multi-cluster-prereqs>`.
+- Deploy a multi-cluster using a :ref:`multi-cluster-quick-start-ref`.
+
+Configure LDAP Client Authentication for a Multi-Cluster Replica Set
+---------------------------------------------------------------------
+
+.. include:: /includes/steps/deploy-k8s-multi-cluster-replica-set-ldap.rst
+
