@@ -34,7 +34,6 @@ Release Notes for |k8s-op-full|
    To learn how to upgrade your deployment, see
    :ref:`meko-upgrade-mdb-version`.
 
-
 MongoDB Resource
 ````````````````
 
@@ -55,6 +54,16 @@ MongoDBOpsManager Resource
   Instead, use :opsmgrkube:`spec.applicationDatabase.podSpec.podTemplate 
   <spec.applicationDatabase>` to configure these
   parameters.
+
+MongoDB Multi-Cluster Resource
+``````````````````````````````
+
+Added support for :ref:`LDAP client authentication
+<multi-cluster-secure-ldap-auth>` and for
+:ref:`managing database users with LDAP <multi-cluster-capabilities>`
+to |multi-clusters|.
+Use the beta release of the |multi-clusters| only in development
+environments.
 
 .. _ent_op-1.16.1:
 
